--- a/HTML.html
+++ b/HTML.html
@@ -14,7 +14,7 @@
         <div class="input"><input type="text" id="operadores" placeholder="+,-,*,/"></div>
         <div class="input"><input type="text" id="operador2" placeholder="Operador 2"></div>
 
-        <button id="calcular">Calcular...</button>
+        <button id="calcular">Calcular</button>
 
         <div class="resultado" id="resultado"></div>
     </div>
