se estilizo la calculadora, se cambiaron elementos y se mejoro la eficiencia de la calculadora, quitanto y modificando el js

--- a/HTML.html
+++ b/HTML.html
@@ -8,15 +8,19 @@
 </head>
 <body>
     <div class="todo">
-        <h1>Calculadora HTML</h1>
+        <h1>Ultimate Calculator</h1>
 
-        <div class="input"><input type="text" id="operador1" placeholder="Operador 1"></div>
-        <div class="input"><input type="text" id="operadores" placeholder="+,-,*,/"></div>
-        <div class="input"><input type="text" id="operador2" placeholder="Operador 2"></div>
+        <div class="input"><input type="text" id="valor1" placeholder="Valor 1"></div>
+        <div class="input"><input type="text" id="operador" placeholder="Operador"></div>
+        <div class="input"><input type="text" id="valor2" placeholder="Valor 2"></div>
 
         <button id="calcular">Calcular</button>
 
+        <div class="linea1"></div>
+
         <div class="resultado" id="resultado"></div>
+
+        <div class="linea2"></div>
     </div>
 
     <script src="script.js"></script>
